Agregando mas codigo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Mi documento html</h1>
     <p>Primeros pasos en el versionado de código.</p>
+    <p>Mas cambios.</p>
 </body>
 </html>
