--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Mi documento html</h1>
     <p>Primeros pasos en el versionado de código.</p>
     <p>Mas cambios.</p>
-    <p>Cambios en rama principal</p>
+    <p>Cambios en rama principal...</p>
 </body>
 </html>
