Agregando js al fichero html

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi documento</title>
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>Mi documento html</h1>
     <p>Primeros pasos en el versionado de código.</p>
     <p>Mas cambios.</p>
+    <h3>Escrito desde la rama local html.</h3>
 </body>
 </html>
