--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
     <ul>
         <li>Mi lista</li>
+        <li>Mi cambio 2 modificado</li>
+        <li>Mi cambio 3 modificado</li>
+        <li>Mi cambio 4 modificado</li>
+        <li>Mi cambio 5 modificado</li>
     </ul>
     <p>Cambios en rama principal.</p>
     <p>Cambios en rama principal...</p>
