Agregando lista de cambios

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 
     <ul>
         <li>Mi lista</li>
+        <li>Mi cambio 2</li>
+        <li>Mi cambio 3</li>
+        <li>Mi cambio 4</li>
+        <li>Mi cambio 5</li>
     </ul>
     <p>Cambios en rama principal.</p>
     <p>Cambios en rama principal...</p>
