Agregando los dos parrafos

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <li>Mi cambio 4</li>
         <li>Mi cambio 5</li>
     </ul>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, corrupti aut cumque consectetur voluptatum soluta excepturi, omnis atque commodi eius, error explicabo modi eos.
+        Autem pariatur iure velit provident facilis.</p>
+    <p>Otro parrafo</p>
     <p>Cambios en rama principal.</p>
     <p>Cambios en rama principal...</p>
     <h3>Escrito desde la rama local html.</h3>
