--- a/index.html
+++ b/index.html
@@ -11,25 +11,8 @@
 </head>
 <body>
     <h1>Mi documento html</h1>
-    <p>Primeros pasos en el versionado de código.</p>
-    <p>Mas cambios.</p>
-
-    <ul>
-        <li>Mi lista</li>
-        <li>Mi cambio 2 modificado</li>
-        <li>Mi cambio 3 modificado</li>
-        <li>Mi cambio 4 modificado</li>
-        <li>Mi cambio 5 modificado</li>
-        <li>Mi cambio 2</li>
-        <li>Mi cambio 3</li>
-        <li>Mi cambio 4</li>
-        <li>Mi cambio 5</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, corrupti aut cumque consectetur voluptatum soluta excepturi, omnis atque commodi eius, error explicabo modi eos.
-        Autem pariatur iure velit provident facilis.</p>
-    <p>Otro parrafo</p>
-    <p>Cambios en rama principal.</p>
-    <p>Cambios en rama principal...</p>
-    <h3>Escrito desde la rama local html.</h3>
+    <p>Primeros pasos en el versionado de código con Git y GitHub.</p>
+    <p>Quieres dominar el uso de git mira este enlace <a href="https://jonmircha.com/git">Enlace</a>.</p>
+    <img src="git-flow.png" alt="Flujo de git." />
 </body>
 </html>
